Istio - Japan/4_Deploy_Apps/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: frontend
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80 
            path: /
